fileserver目前在服务器上测试,不存在传输内容为0kb,显示了上传/下载文件大小

--- a/fileserver/makefile
+++ b/fileserver/makefile
@@ -1,8 +1,14 @@
-server: server.cpp
+# 默认目标
+all: server client
+
+# 编译 server 目标
+server: server.cpp threadpool.cpp
 	g++ server.cpp threadpool.cpp -o server -pthread
 
+# 编译 client 目标
 client: client.cpp
 	g++ client.cpp -o client
 
+# 清理目标
 clean:
 	rm -f server client
